<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/joel_boucquemont_pestilence_arena">

    <ImageView
        android:id="@+id/imageView_hero2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHero3"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ProgressBar
        android:id="@+id/progressBarHero1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:progressDrawable="@drawable/progressbar"
        android:max="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarHero3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:progressDrawable="@drawable/progressbar"
        android:max="100"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_spell_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:enabled="false"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/spell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_attack_1"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />

    <Button
        android:id="@+id/button_attack_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/attack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />

    <Button
        android:id="@+id/button_heal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"

        android:enabled="false"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/heal"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@+id/button_spell_1"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />


    <Button
        android:id="@+id/button_spell_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:enabled="false"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/spell"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_attack_2"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />

    <Button
        android:id="@+id/button_attack_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/attack"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />

    <Button
        android:id="@+id/button_heal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButton"
        android:enabled="false"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/heal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_spell_2"
        app:layout_constraintTop_toBottomOf="@+id/textView_fight" />

    <TextView
        android:id="@+id/textView_player_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/playerone"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_player_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/playertwo"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/fight"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_hero1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHero1"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/is_ko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/permanent_marker"
        android:text="TextView"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_fight"
        app:layout_constraintEnd_toStartOf="@+id/imageView_hero2"
        app:layout_constraintStart_toEndOf="@+id/imageView_hero1" />

    <TextView
        android:id="@+id/msg_mana_1"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Special capacities available !"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHero1" />

    <TextView
        android:id="@+id/msg_mana_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="Special capacities available !"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHero3" />

</android.support.constraint.ConstraintLayout>

